<resources>
    <string name="app_name">TD Filmes</string>
    <string name="sair">Sair</string>
    <string name="filmes">Filmes</string>
    <string name="sobre_nos">Sobre nós</string>
    <string name="abrir_drawer">Abrir</string>
    <string name="fechar_drawer">Fechar</string>
    <string name="nome_do_usuario">Nome do Usuario</string>
    <string name="digite_o_nome_do_filme">Digite o nome do filme</string>
    <string name="todo">TODO</string>
    <string name="populares">Populares</string>
    <string name="proximos_lancamentos">Próximos lançamentos</string>
    <string name="mais_votados">Mais votados</string>
    <string name="td_filmes">TD Filmes</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="logo_da_td_filmes">Logo da TD Filmes</string>
</resources>